--- a/index.html
+++ b/index.html
@@ -13,54 +13,50 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
+
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    
   </head>
   <body>
     <div id="container">
       <div id="sedan-container">
+        <img src="./images/icon-sedans.svg" alt="sedan img" />
         <h2>Sedan</h2>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
         </p>
+        <button class="btn">Learn More</button>
       </div>
       <div id="suv-container">
-        <h3>SUVs</h3>
+        <img src="./images/icon-suvs.svg" alt="suv img" />
+        <h2>SUVs</h3>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
         </p>
+        <button class="btn">Learn More</button>
       </div>
       <div id="luxury-container">
-        <h4>Luxury</h4>
+        <img src="./images/icon-luxury.svg" alt="luxury img" />
+        <h2>Luxury</h4>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
         </p>
+        <button class="btn">Learn More</button>
       </div>
+    </div>
 
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Paul Rivera</a>.
       </div>
-    </div>
   </body>
 </html>
